# kmap

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOP.md  GENERATION_RULES.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  kmap.py  kmap.yaml.example  pyproject.toml
.github/workflows/: ci.yml
config/: example.full.yaml  example.minimum.yaml
config/common/: external_mappings.yaml
kmap/: __init__.py  cli.py  env.py  hostish.py  identifiers.py  io.py  lists.py  metadata.py  paths.py  rendering_resources.py  tool_config.py  tool_config_validation.py  validators.py  version.py
kmap/command/: __init__.py
kmap/config/: __init__.py  core.py  discovery.py  metadata.py  names.py  options.py  project_metadata.py  projects.py  validation.py  validation_external.py  validation_resources.py
kmap/database/: __init__.py  metadata.py  types.py  url.py
kmap/inspection/: __init__.py  bucket_dedup.py  bucket_detection.py  bucket_family.py  bucket_sanitization.py  buckets.py  dependency_sanitization.py  runtime.py  sanitization.py  sanitization_mocking.py  source_rank.py  workloads.py
kmap/inventory/: __init__.py  bucket_artifacts.py  bucket_html.py  buckets.py  cluster_fragments.py  cluster_inventory.py  cluster_inventory_rows.py  cluster_reports.py  cluster_state.py  full_discovery.py  full_discovery_client.py  full_progress.py  (+26 more)
tests/: test_cli.py  test_cli_reachability.py  test_database.py  test_env.py  test_external_mappings.py  test_hostish.py  test_identifiers.py  test_import_boundaries.py  test_io.py  test_kubeconfig.py  test_kubernetes.py  test_kubernetes_client.py  test_kubernetes_network.py  test_kubernetes_objects.py  test_lists.py  test_logging.py  test_metadata.py  test_metadata_runtime.py  test_model.py  test_naming.py  test_naming_aliases.py  test_naming_context.py  test_naming_display.py  test_naming_fallback.py  test_naming_release.py  test_naming_types.py  test_pipeline.py  test_tool_config.py  test_validators.py
(+292 files in other folders)
