[project]
name = "korex-labs-kmap"
version = "1.1.1"
description = "Kubernetes architecture map generator for Structurizr and LikeC4."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]
keywords = ["kubernetes", "architecture", "structurizr", "likec4", "c4model"]

[project.scripts]
kmap = "kmap.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kmap*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --import-mode=importlib"
cache_dir = ".tmp/pytest_cache"

[tool.coverage.run]
branch = true
source = ["kmap"]
data_file = ".tmp/.coverage"
omit = [
  "kmap.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 97
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise SystemExit",
]

[tool.coverage.html]
directory = ".tmp/htmlcov"

[tool.coverage.xml]
output = ".tmp/coverage.xml"

[tool.ruff]
line-length = 120
target-version = "py311"
cache-dir = ".tmp/ruff_cache"
extend-exclude = [
  ".tmp",
  "htmlcov",
]

[tool.ruff.lint]
select = [
  "A",
  "ANN201",
  "ANN202",
  "ANN204",
  "ARG001",
  "B",
  "BLE",
  "C4",
  "E4",
  "E7",
  "E9",
  "F",
  "FURB",
  "I",
  "PERF",
  "PLC0206",
  "PTH",
  "PLW0108",
  "PLW2901",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP017",
  "UP034",
]

[tool.ruff.lint.isort]
known-first-party = ["kmap"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "ARG", "PLR2004", "PLR6301"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 8
max-locals = 15
max-positional-args = 5
max-statements = 50
